<resources>
    <string name="app_name">Notfy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Account</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="splash">Splash</string>
    <string name="login_page">Login Page</string>
    <string name="notfy">Notfy</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="name"> Name</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="password_again">Password Again</string>
</resources>
