<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/notfy"
        android:textColor="@android:color/background_light"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:background="@drawable/background_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/btn_sign"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:drawableStart="@drawable/ic_email_mine"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="#fff" />

</RelativeLayout>